Cambios en los detalles y el presupuesto
Terminado la actividad "Detalle", además se ha implementado el adaptador de los extras además del presupuesto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
         <activity
             android:name=".Detalle"
             android:label="@string/title_activity_detalle"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Presupuesto"
+            android:label="Presupuesto"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
     </application>
 
 </manifest>
