--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "com.example.juan.concesionario"
         //minSdkVersion 16
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -30,4 +30,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.itextpdf:itext-pdfa:5.5.10'
+    implementation group: 'com.itextpdf.tool', name: 'xmlworker', version: '5.5.10'
 }
